BugFix: overflow: auto for modal window

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1401,10 +1401,6 @@ template {
   grid-column: 3;
 }
 
-.modal {
-  overflow-y: hidden;
-}
-
 .modal__overlay {
   position: fixed;
   top: 0;
@@ -1417,7 +1413,6 @@ template {
   opacity: 0;
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
-  overflow-y: hidden;
 }
 
 .modal__overlay--visible {
@@ -1426,6 +1421,7 @@ template {
 }
 
 .modal__dialog {
+  max-height: 487px;
   position: fixed;
   top: 50%;
   left: 50%;
