--- a/templates/sass/blocks/_modal.sass
+++ b/templates/sass/blocks/_modal.sass
@@ -1,5 +1,4 @@
 .modal
-  overflow-y: hidden
   &__overlay
     position: fixed
     top: 0
@@ -11,11 +10,11 @@
     visibility: hidden
     opacity: 0
     transition: opacity 0.2s
-    overflow-y: hidden
     &--visible
       visibility: visible
       opacity: 1
   &__dialog
+    max-height: 487px
     position: fixed
     top: 50%
     left: 50%
